objects/Schedule_Task__c/Schedule_Task__c.object-meta.xml
<CustomObject>
    <description>This is Schedule Task object. It is child object of Schedule Template object.</description>
    <label>Schedule Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>