objects/Schedule_Task__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report</label>
    <type>Checkbox</type>
</CustomField>