objects/Schedule_Task__c/fields/Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Template__c</fullName>
    <label>Schedule Template</label>
    <referenceTo>Schedule_Template__c</referenceTo>
    <relationshipLabel>Schedule Tasks</relationshipLabel>
    <relationshipName>Schedule_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>