objects/Schedule_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Days__c</columns>
    <columns>Task_Order__c</columns>
    <columns>Schedule_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>